// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render resource view name Should render common resource view name with link 1`] = `
<div
  className="ta-component abc-resource-view__name"
  data-lego="react"
  style={Object {}}
>
  <ta-title
    font="m"
    key="title"
    level={1}
    mix={
      Object {
        "block": "abc-resource-view",
        "elem": "title",
      }
    }
    size="s"
  />
  <link
    key="link"
    mix={
      Object {
        "block": "abc-resource-view",
        "elem": "link",
      }
    }
    onClick={[Function]}
    tabIndex="0"
    target="_blank"
    theme="ghost"
    url="someLink"
  >
    <icon
      glyph="link"
      key="icon-link"
    />
  </link>
</div>
`;

exports[`Render resource view name Should render common resource view name without link 1`] = `
<div
  className="ta-component abc-resource-view__name"
  data-lego="react"
  style={Object {}}
>
  <ta-title
    font="m"
    key="title"
    level={1}
    mix={
      Object {
        "block": "abc-resource-view",
        "elem": "title",
      }
    }
    size="s"
  />
</div>
`;
